appconfig/curiosity-frontend-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curiosityfrontend-service-clusterip
  namespace: curiosityevents
spec:
  type: ClusterIP
  selector:
    app: curiosity-frontend-ms
  ports:
  - port: 80
    targetPort: 3000
    name: http
