appconfig/curiosity-frontend-ms-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: curiosity-frontend-service-lb
  namespace: curiosityevents
spec:
  type: LoadBalancer
  selector:
    app: curiosity-frontend-ms
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 3000
      targetPort: 3000
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
